--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -201,6 +201,185 @@
     "zipcode": "우편번호",
     "zipcode_required": "우편번호는 필수입니다"
   },
+  "admin": {
+    "orders_management": "주문 관리",
+    "delete_selected": "선택 삭제",
+    "delete_all": "전체 삭제",
+    "refresh": "새로고침",
+    "search_placeholder": "주문번호, 고객명, 이메일, 송장번호 검색...",
+    "all_status": "모든 상태",
+    "all_payments": "모든 결제 상태",
+    "table": {
+      "order": "주문",
+      "customer": "고객",
+      "status": "상태",
+      "payment": "결제",
+      "amount": "금액",
+      "date": "날짜",
+      "actions": "관리",
+      "items": "상품",
+      "no_name": "이름 없음",
+      "quantity": "수량",
+      "email": "이메일"
+    },
+    "status": {
+      "select": "상태 선택",
+      "pending": "대기 중",
+      "processing": "처리 중",
+      "shipped": "배송 중",
+      "delivered": "배송 완료",
+      "completed": "구매 확정",
+      "cancelled": "취소됨",
+      "confirmed": "주문 확인",
+      "out_for_delivery": "배송 출발"
+    },
+    "payment_status": {
+      "select": "결제 상태 선택",
+      "paid": "결제 완료",
+      "pending": "결제 대기",
+      "failed": "결제 실패",
+      "refunded": "환불 완료",
+      "partial": "부분 결제"
+    },
+    "payment_method": {
+      "online": "간편 결제",
+      "toss": "토스페이먼츠",
+      "card": "카드 결제",
+      "virtual_account": "가상계좌",
+      "transfer": "계좌이체",
+      "mobile": "휴대폰 결제",
+      "unknown": "알 수 없음"
+    },
+    "messages": {
+      "delete_success": "주문이 삭제되었습니다.",
+      "delete_all_success": "모든 주문이 삭제되었습니다.",
+      "delete_selected_success": "{{count}}개의 주문이 삭제되었습니다.",
+      "delete_selected_error": "선택된 주문 삭제 실패",
+      "select_to_delete": "삭제할 주문을 선택해주세요.",
+      "update_status_success": "주문 상태가 {{status}}(으)로 변경되었습니다.",
+      "update_payment_success": "결제 상태가 {{status}}(으)로 변경되었습니다."
+    },
+    "buttons": {
+      "delete_selected": "선택 삭제",
+      "edit": "수정",
+      "delete": "삭제",
+      "save": "저장",
+      "cancel": "취소",
+      "view_details": "상세 보기",
+      "edit_status": "상태 변경",
+      "delete_order": "주문 삭제",
+      "close": "닫기",
+      "deleting": "삭제 중...",
+      "delete_count_orders": "{{count}}개 주문 삭제"
+    },
+    "empty": {
+      "title": "주문 없음",
+      "search": "검색 결과가 없습니다.",
+      "no_orders": "아직 주문이 없습니다."
+    },
+    "modal": {
+      "order_details": "주문 상세",
+      "order_info": "주문 정보",
+      "shipping_address": "배송지 정보",
+      "delete_order_title": "주문 삭제",
+      "delete_order_confirm": "다음 주문을 삭제하시겠습니까?",
+      "delete_all_title": "모든 주문 삭제",
+      "delete_all_confirm": "모든 주문을 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+      "delete_selected_title": "선택된 주문 삭제",
+      "delete_selected_confirm": "{{count}}개의 선택된 주문을 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+      "warning": "주의",
+      "delete_warning": "이 작업은 되돌릴 수 없습니다. 데이타가 영구적으로 삭제됩니다."
+    },
+    "pagination": {
+      "showing": "전체 {{total}}개 중 {{start}}-{{end}} 표시",
+      "previous": "이전",
+      "next": "다음",
+      "page_of": "{{current}} / {{total}} 페이지"
+    },
+    "common": {
+      "unknown": "알 수 없음",
+      "not_specified": "지정되지 않음"
+    },
+    "users": {
+      "title": "회원 관리",
+      "selected": "{{count}}명 선택됨",
+      "showing": "전체 {{total}}명 중 {{start}}-{{end}}명 표시",
+      "delete_selected": "{{count}}명 회원 삭제",
+      "toast": {
+        "update_success": "{{name}}님의 정보가 수정되었습니다",
+        "update_error": "사용자 정보 수정 실패",
+        "delete_success": "사용자가 삭제되었습니다",
+        "delete_error": "사용자 삭제 실패",
+        "select_users": "삭제할 사용자를 선택해주세요",
+        "bulk_delete_success": "{{count}}명의 사용자가 삭제되었습니다",
+        "bulk_delete_error": "사용자 일괄 삭제 실패"
+      },
+      "table": {
+        "user": "사용자",
+        "role": "권한",
+        "orders": "주문수",
+        "total_spent": "총 결제액",
+        "joined": "가입일",
+        "actions": "관리",
+        "no_name": "이름 없음"
+      },
+      "modal": {
+        "edit_title": "사용자 정보 수정",
+        "user_id": "사용자 ID",
+        "personal_info": "개인 정보",
+        "full_name": "이름",
+        "email": "이메일",
+        "login_email_note": "이 이메일은 로그인 시 사용됩니다.",
+        "role_permissions": "권한 및 설정",
+        "role_label": "역할",
+        "current": "현재",
+        "new": "변경",
+        "role_change_note": "역할 변경 시 접근 권한이 즉시 적용됩니다.",
+        "stats": "활동 통계",
+        "total_orders": "총 주문",
+        "total_spent": "총 결제액",
+        "member_since": "가입일",
+        "current_role": "현재 역할",
+        "placeholder": {
+          "name": "이름을 입력하세요",
+          "email": "이메일을 입력하세요"
+        },
+        "delete_title": "사용자 삭제",
+        "delete_confirm": "정말 삭제하시겠습니까?",
+        "delete_warning": "삭제된 사용자는 복구할 수 없습니다.",
+        "delete_desc": "사용자 계정과 관련된 모든 데이터가 영구적으로 삭제됩니다.",
+        "delete_confirm_btn": "사용자 삭제",
+        "user_summary": "권한: {{role}} • 주문: {{orders}}건 • 결제: {{spent}}",
+        "bulk_delete_title": "사용자 일괄 삭제",
+        "bulk_delete_confirm": "{{count}}명의 사용자를 삭제하시겠습니까?",
+        "cannot_undo": "이 작업은 되돌릴 수 없습니다.",
+        "bulk_delete_warning": "다음 {{count}}명의 사용자가 삭제됩니다:",
+        "more_users": "...외 {{count}}명",
+        "bulk_delete_desc": "선택한 사용자의 계정, 주문 내역 및 모든 관련 데이터가 영구적으로 삭제됩니다.",
+        "bulk_delete_btn": "{{count}}명 삭제"
+      },
+      "role": {
+        "admin": "관리자",
+        "account": "회계",
+        "packer": "포장",
+        "delivery": "배송",
+        "user": "일반 회원",
+        "desc": {
+          "user": "기본 고객 권한",
+          "packer": "주문 포장 및 관리",
+          "delivery": "배송 및 운송 관리",
+          "account": "재무 및 정산 관리",
+          "admin": "전체 시스템 관리 권한"
+        }
+      },
+      "role_management": "권한 할당 및 회원 관리",
+      "manage_users": "회원 관리",
+      "empty": {
+        "title": "회원 없음",
+        "desc": "아직 가입한 회원이 없습니다."
+      }
+    }
+  },
   "auth": {
     "guests": "게스트",
     "login": "로그인",
@@ -561,18 +740,23 @@
     "filter": "필터",
     "hello": "안녕하세요",
     "in_cart": "담김",
+    "in_category": "카테고리:",
     "loading": "로딩 중...",
     "login_required": "로그인이 필요합니다",
     "no_products_available": "상품이 없습니다.",
+    "nothing_matched_with": "일치하는 결과가 없습니다:",
     "open": "열기",
     "optional": "선택사항",
     "out_of_stock": "품절",
     "please_login_to_view_cart": "장바구니를 보려면 로그인하세요",
+    "please_try_again": "다른 검색어로 다시 시도해보세요",
     "privacy": "개인정보처리방침",
     "products_in_category": "{{category}} 카테고리의 상품들",
     "quantity": "수량",
     "search": "검색",
     "search_products_here": "상품을 검색하세요...",
+    "searching_for": "\"{{query}}\" 검색 중...",
+    "trending_products": "급상승 쇼핑 키워드",
     "shop_now": "지금 구매",
     "start_shopping": "쇼핑 시작하기",
     "support": "고객지원",
@@ -584,6 +768,64 @@
     "view": "보기",
     "view_all_categories": "모든 카테고리 보기",
     "view_more": "더 보기"
+  },
+  "orders": {
+    "status_confirmed": "결제 확인",
+    "status_pending": "대기 중",
+    "status_processing": "준비 중",
+    "status_shipped": "배송 중",
+    "status_delivered": "배송 완료",
+    "status_cancelled": "취소됨",
+    "status_completed": "완료",
+    "status_refunded": "환불됨",
+    "payment_status_pending": "결제 대기",
+    "payment_status_paid": "결제 완료",
+    "payment_status_failed": "결제 실패",
+    "payment_status_refunded": "환불 완료",
+    "payment_status_partial": "부분 결제",
+    "tab_all": "전체",
+    "tab_pending": "결제 대기",
+    "tab_paid": "결제 완료",
+    "tab_shipping": "배송",
+    "tab_cancelled": "취소",
+    "cancel_order": "주문 취소",
+    "track_order": "배송 조회",
+    "pay_now": "지금 결제",
+    "cancelling": "취소 중...",
+    "orders_deleted": "개의 주문이 삭제되었습니다",
+    "delete_failed": "삭제 실패",
+    "order_delete_error": "삭제 중 오류가 발생했습니다",
+    "cancel_reason": "취소 사유",
+    "select_reason": "사유를 선택해주세요",
+    "reason_customer_change": "단순 변심",
+    "reason_defective": "상품 불량",
+    "reason_wrong_delivery": "오배송",
+    "reason_other": "기타",
+    "order_amount": "주문 금액",
+    "shipping_fee_deduction": "왕복 택배비 차감 6,000원",
+    "customer_change_notice": "단순 변심으로 인한 취소 시 왕복 택배비가 차감됩니다.",
+    "additional_payment_required": "추가 결제 필요 금액",
+    "pay_and_cancel": "결제하고 취소하기",
+    "status_confirmed_label": "주문 확인",
+    "status_out_for_delivery": "배송 출발",
+    "status_packed": "포장 완료",
+    "status_on_hold": "보류",
+    "status_returned": "반품",
+    "order_status": "주문 상태",
+    "order_number": "주문번호",
+    "order_date": "주문일자",
+    "order_total": "총 결제 금액",
+    "view_details": "상세 보기"
+  },
+  "reviews": {
+    "my_reviews": "내 리뷰",
+    "no_reviews": "작성한 리뷰가 없습니다.",
+    "product_name": "상품명",
+    "comment": "내용",
+    "rating": "평점",
+    "date": "작성일",
+    "edit_review": "리뷰 수정",
+    "delete_review": "리뷰 삭제"
   },
   "filters": {
     "no_colors": "사용 가능한 색상이 없습니다",
@@ -713,162 +955,8 @@
     "percent_off": "% 할인",
     "price_high_to_low": "가격 높은순",
     "price_low_to_high": "가격 낮은순",
-    "products_on_sale": "판매 중인 상품",
-    "sort_by": "정렬 기준",
     "title": "특가 상품",
     "try_adjusting_filters": "필터를 조정하여 다른 상품을 찾아보세요."
-  },
-  "orders": {
-    "tab_all": "전체",
-    "tab_pending": "결제 대기",
-    "tab_paid": "결제 완료",
-    "tab_shipping": "배송",
-    "tab_cancelled": "취소",
-    "cancel_reason": "취소 사유",
-    "select_reason": "사유를 선택해주세요",
-    "reason_customer_change": "단순 변심",
-    "reason_defective": "상품 불량",
-    "reason_wrong_delivery": "오배송",
-    "reason_other": "기타",
-    "order_amount": "주문 금액",
-    "shipping_fee_deduction": "왕복 택배비 차감 6,000원",
-    "customer_change_notice": "단순 변심으로 인한 취소 시 왕복 택배비가 차감됩니다.",
-    "deficit_notice": "주문 금액보다 차감될 배송비가 큽니다.\n부족한 배송비를 결제하시면 취소가 완료됩니다.",
-    "additional_payment_required": "추가 결제 필요 금액",
-    "pay_and_cancel": "결제하고 취소하기",
-    "payment_request_failed": "결제 요청에 실패했습니다.",
-    "processing": "처리 중...",
-    "select_cancel_reason": "취소 사유를 선택해주세요.",
-    "allergic_reaction": "알레르기 반응",
-    "better_price": "더 좋은 가격 발견",
-    "billing_address": "청구 주소",
-    "buy_again": "다시 구매",
-    "cancel_confirm_message": "정말로 이 주문을 취소하시겠습니까?",
-    "cancel_confirm_title": "주문 취소 확인",
-    "cancel_failed": "주문 취소에 실패했습니다.",
-    "cancel_order": "주문 취소",
-    "cancel_success": "주문이 성공적으로 취소되었습니다.",
-    "cancelling": "취소 중...",
-    "carrier": "택배사",
-    "changed_mind": "단순 변심",
-    "color_exchange": "색상 교환",
-    "color_issue": "색상 문제",
-    "compatibility_issue": "호환성 문제",
-    "contact_seller": "판매자 문의",
-    "coupon_used": "사용된 쿠폰",
-    "customer_request_cancel": "고객 요청에 의한 취소",
-    "damaged_packaging": "포장 손상",
-    "defective_item": "불량품",
-    "delete_confirm_message": "정말로 선택한 주문을 삭제하시겠습니까?",
-    "delete_confirm_title": "주문 삭제 확인",
-    "delete_failed": "삭제 실패",
-    "delete_success": "주문이 삭제되었습니다.",
-    "delivered_on": "배송 완료일",
-    "delivery_date": "배송일",
-    "delivery_instructions": "배송 요청사항",
-    "delivery_status": "배송 상태",
-    "discount_applied": "적용된 할인",
-    "download_invoice": "송장 다운로드",
-    "email_receipt": "영수증 이메일 발송",
-    "estimated_delivery": "배송 예정일",
-    "exchange_item": "상품 교환",
-    "exchange_options": "교환 옵션",
-    "exchange_policy": "교환 정책",
-    "exchange_reason": "교환 사유",
-    "expected_delivery": "배송 예정일",
-    "gift_message": "선물 메시지",
-    "gift_return": "선물 반품",
-    "items_ordered": "주문 상품",
-    "leave_review": "리뷰 작성",
-    "medical_reason": "의료상 이유",
-    "model_exchange": "모델 교환",
-    "modify_order": "주문 변경",
-    "my_orders": "내 주문",
-    "no_longer_needed": "더 이상 필요 없음",
-    "not_as_described": "설명과 다름",
-    "order": "주문",
-    "order_cancel_error": "주문 취소 중 오류가 발생했습니다.",
-    "order_date": "주문일자",
-    "order_delete_error": "주문 삭제 중 오류가 발생했습니다.",
-    "order_details": "주문 상세",
-    "order_history": "주문 기록",
-    "order_id": "주문 ID",
-    "order_info": "주문 정보",
-    "order_number": "주문번호",
-    "order_status": "주문 상태",
-    "order_summary": "주문 요약",
-    "order_time": "주문 시간",
-    "order_total": "총 결제 금액",
-    "order_tracking": "주문 추적",
-    "orders": "주문들",
-    "orders_deleted": "개의 주문이 삭제되었습니다.",
-    "other_reason": "기타 사유",
-    "past_orders": "이전 주문",
-    "pay_now": "지금 결제",
-    "payment_method": "결제 방법",
-    "payment_status_paid": "결제 완료",
-    "payment_status_pending": "결제 대기 중",
-    "performance_issue": "성능 문제",
-    "personal_reason": "개인적 사유",
-    "points_earned": "적립 포인트",
-    "points_used": "사용된 포인트",
-    "price_paid": "결제 금액",
-    "print_receipt": "영수증 출력",
-    "quality_issue": "품질 문제",
-    "quantity_ordered": "주문 수량",
-    "rate_product": "상품 평가",
-    "recent_orders": "최근 주문",
-    "refund_amount": "환불 금액",
-    "refund_info": "결제가 취소되고 환불이 진행됩니다.",
-    "refund_method": "환불 방법",
-    "refund_status": "환불 상태",
-    "reorder": "재주문",
-    "repeat_order": "동일 주문",
-    "report_issue": "문제 신고",
-    "return_instructions": "반품 안내",
-    "return_item": "상품 반품",
-    "return_label": "반품 라벨",
-    "return_policy": "반품 정책",
-    "return_reason": "반품 사유",
-    "return_shipping": "반품 배송",
-    "return_window": "반품 기간",
-    "safety_concern": "안전 문제",
-    "shipping_address": "배송 주소",
-    "shipping_cost": "배송비",
-    "shipping_method": "배송 방법",
-    "shipping_status": "배송 현황",
-    "size_exchange": "사이즈 교환",
-    "size_issue": "사이즈 문제",
-    "status_cancelled": "주문 취소",
-    "status_confirmed": "주문 확인",
-    "status_delivered": "배송 완료",
-    "status_failed": "주문 실패",
-    "status_on_hold": "보류",
-    "status_out_for_delivery": "배송 출발",
-    "status_packed": "포장 완료",
-    "status_pending": "대기 중",
-    "status_preparing": "준비 중",
-    "status_processing": "처리 중",
-    "status_refunded": "환불 완료",
-    "status_returned": "반품",
-    "status_shipped": "배송 중",
-    "status_대기중": "대기 중",
-    "status_배송중": "배송 중",
-    "status_완료": "배송 완료",
-    "status_준비중": "준비 중",
-    "status_처리중": "처리 중",
-    "status_취소": "주문 취소",
-    "status_환불": "환불 완료",
-    "tax_amount": "세금",
-    "title": "주문 내역",
-    "total_paid": "총 결제액",
-    "track_order": "주문 조회",
-    "track_package": "배송 조회",
-    "track_shipping": "배송 조회",
-    "tracking_info": "배송 정보",
-    "tracking_number": "송장번호",
-    "view_details": "상세 보기",
-    "wrong_item": "잘못된 상품"
   },
   "product": {
     "add_to_cart": "장바구니 담기",
@@ -882,12 +970,14 @@
     "off": "할인",
     "out_of_stock": "품절된 상품입니다!",
     "remove_from_favorite": "관심 상품 제거",
+    "related_products": "관련 상품",
     "reviews": "구매 후기",
     "select_option": "옵션을 선택해주세요!",
     "upon_purchase": "만큼 절약하실 수 있습니다!",
     "view_details": "상세 보기",
     "viewers_watching": "지금 {{count}}+명이 이 상품을 보고 있습니다",
-    "you_are_saving": "총"
+    "you_are_saving": "총",
+    "you_might_also_like": "이런 상품은 어떠세요?"
   },
   "products": {
     "all_products": "모든 상품",
