--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -123,11 +123,11 @@
     "payment": "결제",
     "payment_methods": "결제 수단",
     "payment_status": {
-      "Paid": "결제 완료",
-      "failed": "결제 실패",
-      "paid": "결제 완료",
-      "pending": "결제 대기",
-      "refunded": "환불됨"
+      "Paid": "支付完成",
+      "failed": "支付失败",
+      "paid": "支付完成",
+      "pending": "等待支付",
+      "refunded": "已退款"
     },
     "payment_status_label": "결제 상태",
     "phone": "전화번호",
@@ -191,6 +191,187 @@
     "your_order_is_currently_being": "주문하신 상품이 현재 {{status}} 상태입니다.",
     "zipcode": "우편번호",
     "zipcode_required": "우편번호는 필수입니다"
+  },
+  "admin": {
+    "orders_management": "订单管理",
+    "delete_selected": "删除选中",
+    "delete_all": "删除所有",
+    "refresh": "刷新",
+    "search_placeholder": "搜索订单号、客户、邮箱或快递单号...",
+    "all_status": "所有状态",
+    "all_payments": "所有支付状态",
+    "table": {
+      "order": "订单",
+      "customer": "客户",
+      "status": "状态",
+      "payment": "支付",
+      "amount": "金额",
+      "date": "日期",
+      "actions": "操作",
+      "items": "商品",
+      "no_name": "无名",
+      "quantity": "数量",
+      "email": "邮箱"
+    },
+    "status": {
+      "select": "选择状态",
+      "pending": "待处理",
+      "processing": "处理中",
+      "shipped": "已发货",
+      "delivered": "已送达",
+      "completed": "已完成",
+      "cancelled": "已取消",
+      "confirmed": "已确认",
+      "out_for_delivery": "派送中"
+    },
+    "payment_status": {
+      "select": "选择支付状态",
+      "paid": "已支付",
+      "pending": "待支付",
+      "failed": "支付失败",
+      "refunded": "已退款",
+      "partial": "部分支付"
+    },
+    "payment_method": {
+      "online": "在线支付",
+      "toss": "Toss Payments",
+      "card": "银行卡支付",
+      "virtual_account": "虚拟账户",
+      "transfer": "银行转账",
+      "mobile": "手机支付",
+      "unknown": "未知"
+    },
+    "messages": {
+      "delete_success": "订单删除成功",
+      "delete_all_success": "所有订单已删除",
+      "delete_selected_success": "成功删除 {{count}} 个订单",
+      "delete_selected_error": "删除选中订单失败",
+      "select_to_delete": "请选择要删除的订单",
+      "update_status_success": "订单状态已更新为 {{status}}",
+      "update_payment_success": "支付状态已更新为 {{status}}"
+    },
+    "buttons": {
+      "delete_selected": "删除所选",
+      "edit": "编辑",
+      "delete": "删除",
+      "save": "保存",
+      "cancel": "取消",
+      "view_details": "查看详情",
+      "edit_status": "修改状态",
+      "delete_order": "删除订单",
+      "close": "关闭",
+      "deleting": "删除中...",
+      "delete_count_orders": "删除 {{count}} 个订单"
+    },
+    "empty": {
+      "title": "暂无订单",
+      "search": "没有符合搜索条件的订单",
+      "no_orders": "尚未收到任何订单"
+    },
+    "modal": {
+      "order_details": "订单详情",
+      "order_info": "订单信息",
+      "shipping_address": "收货地址",
+      "delete_order_title": "删除订单",
+      "delete_order_confirm": "确定要删除订单吗",
+      "delete_all_title": "删除所有订单",
+      "delete_all_confirm": "确定要删除所有订单吗？此操作无法撤销。",
+      "delete_selected_title": "删除选中订单",
+      "delete_selected_confirm": "确定要删除 {{count}} 个选中订单吗？此操作无法撤销。",
+      "warning": "警告",
+      "delete_warning": "此操作无法撤销。订单将从数据库中永久删除。"
+    },
+    "pagination": {
+      "showing": "显示第 {{start}} 到 {{end}} 条，共 {{total}} 条结果",
+      "previous": "上一页",
+      "next": "下一页",
+      "page_of": "第 {{current}} 页 / 共 {{total}} 页"
+    },
+    "common": {
+      "unknown": "未知",
+      "not_specified": "未指定"
+    },
+    "users": {
+      "title": "用户管理",
+      "orders_count": "{{count}} 订单",
+      "spent_amount": "{{amount}} 消费",
+      "selected": "已选择 {{count}} 名用户",
+      "showing": "显示 {{total}} 位用户中的 {{start}}-{{end}} 位",
+      "delete_selected": "删除 {{count}} 名用户",
+      "toast": {
+        "update_success": "用户 {{name}} 更新成功",
+        "update_error": "更新用户失败",
+        "delete_success": "用户已删除",
+        "delete_error": "删除用户失败",
+        "select_users": "请选择要删除的用户",
+        "bulk_delete_success": "成功删除 {{count}} 名用户",
+        "bulk_delete_error": "批量删除用户失败"
+      },
+      "table": {
+        "user": "用户",
+        "role": "角色",
+        "orders": "订单数",
+        "total_spent": "总消费",
+        "joined": "加入时间",
+        "actions": "操作",
+        "no_name": "无名氏"
+      },
+      "modal": {
+        "edit_title": "编辑用户信息",
+        "user_id": "用户 ID",
+        "personal_info": "个人信息",
+        "full_name": "姓名",
+        "email": "电子邮箱",
+        "login_email_note": "用于登录验证。",
+        "role_permissions": "角色与权限",
+        "role_label": "角色",
+        "current": "当前",
+        "new": "新",
+        "role_change_note": "权限更改将立即生效。",
+        "stats": "用户统计",
+        "total_orders": "总订单",
+        "total_spent": "总消费",
+        "member_since": "注册时间",
+        "current_role": "当前角色",
+        "placeholder": {
+          "name": "请输入姓名",
+          "email": "请输入电子邮箱"
+        },
+        "delete_title": "删除用户",
+        "delete_confirm": "确认删除此用户？",
+        "delete_warning": "此操作无法撤销。",
+        "delete_desc": "将永久删除该账号及其所有相关数据。",
+        "delete_confirm_btn": "删除用户",
+        "user_summary": "角色: {{role}} • 订单: {{orders}} • 消费: {{spent}}",
+        "bulk_delete_title": "批量删除用户",
+        "bulk_delete_confirm": "删除 {{count}} 名用户？",
+        "cannot_undo": "此操作无法撤销。",
+        "bulk_delete_warning": "您将删除以下 {{count}} 名用户：",
+        "more_users": "...以及其他 {{count}} 名用户",
+        "bulk_delete_desc": "将永久删除这些账号及其所有相关数据。",
+        "bulk_delete_btn": "删除 {{count}} 名用户"
+      },
+      "role": {
+        "admin": "管理员",
+        "account": "财务",
+        "packer": "打包员",
+        "delivery": "配送员",
+        "user": "普通用户",
+        "desc": {
+          "user": "基本客户权限",
+          "packer": "订单打包与管理",
+          "delivery": "发货与配送管理",
+          "account": "财务与结算管理",
+          "admin": "系统完全访问权限"
+        }
+      },
+      "role_management": "角色分配与用户管理",
+      "manage_users": "管理用户",
+      "empty": {
+        "title": "未找到用户",
+        "desc": "注册用户将显示在这里"
+      }
+    }
   },
   "auth": {
     "guests": "访客",
@@ -464,32 +645,32 @@
     "you_are_saving": "您节省了"
   },
   "settings": {
-    "addresses": "배송지 관리",
-    "addressesDesc": "배송지 정보 및 기본 배송지를 관리하세요",
-    "currency": "통화 설정",
-    "dark_mode": "다크 모드",
-    "email_notifications": "이메일 알림",
-    "helpSupport": "고객 센터",
-    "helpSupportDesc": "도움말 및 지원팀에 문의하세요",
-    "language": "언어 설정",
-    "light_mode": "라이트 모드",
-    "myOrders": "내 주문 내역",
-    "myOrdersDesc": "주문 내역과 배송 상태를 확인하세요",
-    "myProfile": "내 프로필",
-    "myProfileDesc": "프로필 정보를 수정하세요",
-    "notifications": "알림 설정",
-    "notificationsDesc": "이메일 및 알림 설정을 관리하세요",
-    "paymentMethods": "결제 수단",
-    "paymentMethodsDesc": "결제 정보를 관리하세요",
-    "privacySecurity": "보안 및 개인정보",
-    "privacySecurityDesc": "계정 보안 및 설정을 관리하세요",
-    "push_notifications": "푸시 알림",
-    "reviews": "내 리뷰",
-    "reviewsDesc": "작성한 상품 리뷰를 관리하세요",
-    "theme": "테마 설정",
-    "title": "설정",
-    "wishlist": "관심 상품",
-    "wishlistDesc": "저장한 관심 상품을 확인하세요"
+    "addresses": "管理收货地址",
+    "addressesDesc": "管理您的收货地址和默认地址",
+    "currency": "货币设置",
+    "dark_mode": "深色模式",
+    "email_notifications": "邮件通知",
+    "helpSupport": "帮助与支持",
+    "helpSupportDesc": "联系我们的帮助与支持团队",
+    "language": "语言设置",
+    "light_mode": "浅色模式",
+    "myOrders": "我的订单",
+    "myOrdersDesc": "查看您的订单历史和配送状态",
+    "myProfile": "我的个人简介",
+    "myProfileDesc": "编辑您的个人信息",
+    "notifications": "通知设置",
+    "notificationsDesc": "管理您的邮件和通知设置",
+    "paymentMethods": "支付方式",
+    "paymentMethodsDesc": "管理您的支付信息",
+    "privacySecurity": "安全与隐私",
+    "privacySecurityDesc": "管理您的账户安全和设置",
+    "push_notifications": "推送通知",
+    "reviews": "我的评价",
+    "reviewsDesc": "管理您已提交的商品评价",
+    "theme": "主题设置",
+    "title": "设置",
+    "wishlist": "我的收藏",
+    "wishlistDesc": "查看您收藏的商品"
   },
   "shipping": {
     "available": "可以",
@@ -519,5 +700,53 @@
     "seller_phone": "卖家电话",
     "standard": "标准配送",
     "tag_removed": "吊牌摘除后不支持退货"
+  },
+  "orders": {
+    "status_confirmed": "已确认",
+    "status_pending": "待处理",
+    "status_processing": "处理中",
+    "status_shipped": "已发货",
+    "status_delivered": "已送达",
+    "status_cancelled": "已取消",
+    "status_completed": "已完成",
+    "status_refunded": "已退款",
+    "payment_status_pending": "待支付",
+    "payment_status_paid": "已支付",
+    "payment_status_failed": "支付失败",
+    "payment_status_refunded": "已退款",
+    "payment_status_partial": "部分支付",
+    "tab_all": "全部",
+    "tab_pending": "待支付",
+    "tab_paid": "已支付",
+    "tab_shipping": "配送中",
+    "tab_cancelled": "已取消",
+    "cancel_order": "取消订单",
+    "track_order": "查看配送",
+    "pay_now": "现在支付",
+    "cancelling": "取消中...",
+    "orders_deleted": "个订单已删除",
+    "delete_failed": "删除失败",
+    "order_delete_error": "删除时发生错误",
+    "cancel_reason": "取消原因",
+    "select_reason": "请选择原因",
+    "reason_customer_change": "由于买家原因取消 (主观原因)",
+    "reason_defective": "商品故障",
+    "reason_wrong_delivery": "配送错误",
+    "reason_other": "其他",
+    "order_amount": "订单金额",
+    "shipping_fee_deduction": "扣除往返运费 6,000韩元",
+    "customer_change_notice": "因主观原因取消时，将扣除往返运费。",
+    "additional_payment_required": "需额外支付金额",
+    "pay_and_cancel": "支付并取消",
+    "status_confirmed_label": "确认订单",
+    "status_out_for_delivery": "开始配送",
+    "status_packed": "包装完成",
+    "status_on_hold": "保留",
+    "status_returned": "退货",
+    "order_status": "订单状态",
+    "order_number": "订单号",
+    "order_date": "订单日期",
+    "order_total": "支付总额",
+    "view_details": "查看详情"
   }
 }
